--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "vscode": "^1.67.0"
   },
   "description": "",
+  "repository": {
+    "url": "https://github.com/jrieken/vscode-pr-pinger"
+  },
   "main": "out/extension.js",
   "browser": "out/extension.js",
   "activationEvents": [
