--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "@octokit/graphql": "^5.0.1"
-  },
   "devDependencies": {
     "esbuild": "^0.15.10",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@octokit/graphql": "^5.0.1"
   }
 }
