do away with bundling

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,11 @@
 			],
 			"name": "Launch Extension",
 			"outFiles": [
-				"${workspaceFolder}/out/**/*.js"
+				"${workspaceFolder}/out/**/*.js",
 			],
+			"sourceMaps": true,
 			"request": "launch",
-			"type": "extensionHost",
-			"preLaunchTask": "npm: transpile"
+			"type": "extensionHost"
 		}
 	]
 }
