--- a/package.json
+++ b/package.json
@@ -14,6 +14,22 @@
   "activationEvents": [
     "onStartupFinished"
   ],
+  "contributes": {
+    "configuration": {
+      "title": "PR Pinger",
+      "properties": {
+        "prpinger.presentation": {
+          "type": "string",
+          "default": "short",
+          "enum": [
+            "number",
+            "short"
+          ],
+          "description": "How PR are shown in the status bar - either as number or without vowels"
+        }
+      }
+    }
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "watch": "tsc -p ./src/ --watch",
